fix: header centering on mobile devices fixed

--- a/style.css
+++ b/style.css
@@ -275,6 +275,9 @@ header img {
   .right {
     display: none;
   }
+  header.container {
+    width: 80%;
+  }
   .container {
     width: 100%;
   }
